--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   backend:
     build:
       context: .
-      dockerfile: Dockerfile.backend
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=sqlite:///./shorter.db
+      - DATABASE_URL=sqlite:///./data/shorter.db
     restart: unless-stopped
     volumes:
       - db_data:/app/data
@@ -16,7 +16,7 @@ services:
   frontend:
     build:
       context: ./app
-      dockerfile: Dockerfile.frontend
+      dockerfile: Dockerfile
     ports:
       - "80:80"
     depends_on:
